--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                 <small>Copyright &copy; Company name. Design. Template Mo  </small>
             </div>
             <div class="top-btn">
-                <a href="./home.html">Back to top</a>
+                <a href="./index.html">Back to top</a>
             </div>
         </div>
     </footer>
