--- a/gallery.html
+++ b/gallery.html
@@ -18,7 +18,7 @@
                     <h4>FLEX</h4>
                 </div>    
                 <div class="home-btn">
-                    <a href="./home.html">Home</a>
+                    <a href="./index.html">Home</a>
                 </div>
             </div>
             <div class="lower-side">
